--- a/src/components/credit-card-form/credit-card-form.module.scss
+++ b/src/components/credit-card-form/credit-card-form.module.scss
@@ -53,6 +53,7 @@
         font-size: 20px;
         cursor: pointer;
         transition: all 300ms ease;
+        outline: none;
 
         &.disabled {
           cursor: not-allowed;
