--- a/src/components/credit-card-form/credit-card-form.module.scss
+++ b/src/components/credit-card-form/credit-card-form.module.scss
@@ -1,11 +1,17 @@
 .creditCardFormFrame {
   width: 100%;
-  min-height: 100vh;
   display: flex;
-  justify-content: center;
+  flex-direction: column;
   align-items: center;
+  padding-top: 200px;
 
   .creditCardForm {
+    .title {
+      font-size: 18px;
+      font-weight: bold;
+      margin-bottom: 30px;
+    }
+
     width: 90%;
     max-width: 300px;
 
